# agents-monorepo

./: .cursorignore  .env.example  .gitignore  .npmrc  README.md  agents.config.yaml  docker-compose.yml  knip.json  package.json  pnpm-lock.yaml  turbo.json
agents/runner/: .env.example  .gitignore  README.md  pyproject.toml
agents/runner/src/runner/: __init__.py  __main__.py
agents/runner/src/runner/application/: __init__.py  entry_chat.py
agents/runner/src/runner/cli/: register.py
agents/runner/src/runner/config/: __init__.py  settings.py
agents/runner/src/runner/domain/: __init__.py
agents/runner/src/runner/infrastructure/: __init__.py  logging_config.py  node_client.py
agents/runner/src/runner/interfaces/: __init__.py  api.py
agents/runner/src/runner/interfaces/routes/: __init__.py  entry_chat.py  health.py  setup.py  stream.py
docs/: ARCHITECTURE.md  CUSTOMER_GUIDE.md  FEISHU_COMMANDS.md  IMPLEMENTATION_ROADMAP.md  README.md  agents-challenges.md  agents-learning-day-plan.md  agents-learning.md  agents-runner-tech-stack.md  architecture-diagrams.md  business-domain.md  data-model-concept.md  future-channels.md  high-concurrency.md  local-development.md  logging.md  module-topology.md  overview.md  phased-delivery.md  pitfalls.md  remote-desktop-electrobun.md  runtime-skills.md  v1-design-and-progress.md
e2e/: playwright.config.ts
scripts/: dev-feishu-min.sh  dev-local-stack.sh  dev-ngrok-down.sh  dev-with-ngrok.sh  logs.sh  migrate-customer-env-to-target.mjs  mock-requirements-http.mjs  pdf-resume-to-site-e2e.mjs  smoke-feishu-webhook.sh  (+4 more)
(+489 files in other folders)
